<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="8dp"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/toppingWhippedCream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:onClick="checkToppings"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:text="@string/topping_whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/toppingChocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="checkToppings"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:text="@string/topping_chocolate"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="8dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="@string/decrement" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:onClick="increment"
                android:text="@string/increment" />
        </LinearLayout>

        <TextView
            android:id="@+id/order_summary_header_text_view"
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="8dp"
            android:text="@string/price" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="orderButton"
            android:text="@string/order" />

    </LinearLayout>


</ScrollView>